--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 
 node_js:
-  - "0.10"
   - "0.12"
+  - "0.10"
+  - "iojs"
+  - "iojs-v1.0.4"
 
-# whitelisted branches
 branches:
   only:
     - master
